-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 17.0.1
-
a16d2a658 (master)
Creator's File System view in the side bar provides context menu items for removing files or folders, respectively. Unfortunately, they are inconsistent:
- "Remove Folder" is displayed as the last item in its group whereas "Remove..." for files is displayed higher up. That makes it harder to find them.
- For files, the menu item is labelled "Remove..." with three trailing dots which indicates that it will open a dialog. "Remove Folder" does not have these dots although it opens what seems to be the same confirmation dialog.
- Their German translations are "Entfernen..." and "Verzeichnis löschen". They should both use the same verb.
| For Gerrit Dashboard: QTCREATORBUG-33270 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 669116,4 | Improve order of items in context menu of file system view | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |